# docs/swagger.json
@@ -469,7 +469,8 @@
                 }
             }
         },
-        "github_com_alumieye_eyeapp-backend_internal_user.UserResponse": {
+        "github_com_alumieye_eyeapp-backend_internal_models.UserResponse": {
+            "description": "User public profile",
             "type": "object",
             "properties": {
                 "display_name": {
@@ -501,7 +502,7 @@
                     "$ref": "#/definitions/internal_auth.TokensResponse"
                 },
                 "user": {
-                    "$ref": "#/definitions/github_com_alumieye_eyeapp-backend_internal_user.UserResponse"
+                    "$ref": "#/definitions/github_com_alumieye_eyeapp-backend_internal_models.UserResponse"
                 }
             }
         },
@@ -531,7 +532,7 @@
             "type": "object",
             "properties": {
                 "user": {
-                    "$ref": "#/definitions/github_com_alumieye_eyeapp-backend_internal_user.UserResponse"
+                    "$ref": "#/definitions/github_com_alumieye_eyeapp-backend_internal_models.UserResponse"
                 }
             }
         },
